<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/finsertname"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/add_founder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/add_founder_name">



        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cls"
            android:textSize="15sp"
            android:layout_marginEnd="3dp"/>

        <Button
            android:id="@+id/feditbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additem"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_marginStart="3dp"/>

    </LinearLayout>
</RelativeLayout>